--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.6",
     "react": "17",
     "react-dom": "17",
-    "react-iconly": "^2.2.5"
+    "react-iconly": "^2.2.5",
+    "@nextui-org/react": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "@nextui-org/react": "^1.0.0-beta.7",
