--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.7",
     "next": "12.1.6",
-    "react": "17",
-    "react-dom": "17",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-iconly": "^2.2.5",
-    "@nextui-org/react": "^1.0.0-beta.7"
+    "typeit-react": "^2.4.4"
   },
   "devDependencies": {
     "@nextui-org/react": "^1.0.0-beta.7",
@@ -32,6 +33,6 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "styled-components": "^5.3.5",
-    "typescript": "4.6.4"
+    "typescript": "^4.6.4"
   }
 }
