--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.7",
+    "@types/aos": "^3.0.4",
+    "aos": "^2.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
